@@ -1,4 +1,4 @@
-.\" $Id: tiff2pdf.1,v 1.6 2006-04-20 12:17:19 dron Exp $
+.\" $Id: tiff2pdf.1,v 1.7 2010-12-11 22:47:49 faxguy Exp $
 .\" 
 .\"  Copyright (c) 2003 Ross Finlayson
 .\" 
@@ -161,6 +161,9 @@ Set paper size, e.g.,
 .BR letter ,
 .BR legal ,
 .BR A4 .
+.TP
+.B \-F
+Cause the tiff to fill the PDF page.
 .TP
 .BR \-u " [" i | m ]
 Set distance unit,
